------------------
Pylint's ChangeLog
------------------

What's New in Pylint 2.8.0?
===========================
Release date: TBA

..
  Put new features here

* Introduce logic for checking deprecated attributes in DeprecationMixin.


What's New in Pylint 2.7.3?
===========================
Release date: TBA

..
  Put bug fixes that will be cherry-picked to latest major version here

* Fix issue with Enums and ``class-attribute-naming-style=snake_case``

  Closes #4149

* Add ``allowed-redefined-builtins`` option for fine tuning ``redefined-builtin`` check.

  Close #3263

* Fix issue when executing with ``python -m pylint``

  Closes #4161

* Exempt ``typing.TypedDict`` from ``too-few-public-methods`` check.

  Closes #4180

* Fix false-positive ``no-member`` for typed annotations without default value.

  Closes #3167

* Add ``--class-const-naming-style`` for Enum constants and class variables annotated
  with ``typing.ClassVar``

  Closes #4181


What's New in Pylint 2.7.2?
===========================
Release date: 2021-02-28

* Fix False Positive on ``Enum.__members__.items()``, ``Enum.__members__.values``, and ``Enum.__members__.keys``
  Closes #4123

* Properly strip dangerous sys.path entries (not just the first one)

  Closes #3636

* Workflow and packaging improvements


What's New in Pylint 2.7.1?
===========================
Release date: 2021-02-23

* Expose ``UnittestLinter`` in pylint.testutils

* Don't check directories starting with '.' when using register_plugins

  Closes #4119


What's New in Pylint 2.7.0?
===========================
Release date: 2021-02-21

* Introduce DeprecationMixin for reusable deprecation checks.

  Closes #4049

* Fix false positive for ``builtin-not-iterating`` when ``map`` receives iterable

  Closes #4078

* Python 3.6+ is now required.

* Fix false positive for ``builtin-not-iterating`` when ``zip`` receives iterable

* Add ``nan-comparison`` check for NaN comparisons

* Bug fix for empty-comment message line number.
