@@ -9,6 +9,7 @@ High level descriptions of the most important changes between major Pylint versi
 .. toctree::
    :maxdepth: 1
 
+   3.0.rst
    2.8.rst
    2.7.rst
    2.6.rst
